@@ -193,6 +193,7 @@ Please select <b>ONE</b> recipient and <b>NO</b> publisher to generate content h
 	<p>Empty tables are due to no data found.
 	<p><b>Data populating the tables can be quite large. Please wait until the spinner disappears for your widget to appear.</b></p>
 	<p>All data is <b>LIVE</b> data and will change if these records are updated.</p>
+	<p>Stuck? <a href="/news/2014-11-30-Interactive-IATI-data-d-portal-generator.html">Click here for some examples of what you can do</a>.</p>
 
 	<a href="mailto:queries@d-portal.org" class="mail">For all questions, suggestions and feedback please contact queries@d-portal.org</a>
 </div>
