@@ -21,6 +21,6 @@ This page will contain any updates to information, and announcements on d-portal
 If you have **any queries about d-portal**, any comments or suggestions please do contact us at <a href="queries@d-portal.org">queries@d-portal.org</a>
 
 
-<a href="{tongue_root}about.html#more">Interested in funding d-portal?</a>
-
-<a href="{tongue_root}about.html#install">How to create a country d-portal</a>
+<h4>Links</h4>
+<a href="{tongue_root}about.html#more" class="news_link">Interested in funding d-portal?</a>
+<a href="{tongue_root}about.html#install" class="news_link">How to create a country d-portal</a>
