@@ -53,5 +53,5 @@ Both the d-portal and the d-portal generator are currently in beta. We’d love 
 
 <em>If you are interested in <strong>finding out more or part-funding d-portal</strong>, please contact </em><a href="mailto:queries@d-portal.org"><em>queries@d-portal.org</em></a>
 
-
-<a href="{tongue_root}ctrack.html#view=generator">Create IATI content with the d-portal Generator</a>
+<h4>Links</h4>
+<a href="{tongue_root}ctrack.html#view=generator" class="news_link">Create IATI content with the d-portal Generator</a>
