@@ -1,0 +1,47 @@
+#blog_title trim=ends
+
+Interactive IATI data – d-portal generator
+
+#blog_body form=markdown
+
+<a href="http://www.d-portal.org">d-portal</a> is a platform that makes all <a href="http://www.aidtransparency.net">IATI</a> data accessible, and is a useful tool for investigating the increasing amount of IATI data. Nearly 300 organisations publish their activities in the <a href="http://www.iatiregistry.org/">IATI registry</a>, so we set up d-portal to turn that data into simple information for everyone – particularly those in developing countries interested in seeing information from their own country’s perspective. In addition to this, we recently added the <a href="http://www.d-portal.org/ctrack.html?#view=generator">generator</a> - to provide a means of re-using the IATI data in d-portal, by embedding it into other websites and blog posts.
+
+<h3><strong>How to select and embed content</strong></h3>
+
+Here we give you some examples of information you can show using the d-portal generator - these are various randomly chosen examples of data which are currently published to IATI, but of course you can choose any current publisher, or combinations of publishers and recipients, depending on what information you want to display.
+
+This is a snapshot of a simple query we've run on the generator...choosing Development Initiatives from the Publisher dropdown, and then the 'Sectors (table)' view...
+
+<a href="http://devinit.org/wp-content/uploads/2014/11/gen-screen-DIPR-sectors-search.jpg"><img class="alignnone size-full wp-image-5081" src="http://devinit.org/wp-content/uploads/2014/11/gen-screen-DIPR-sectors-search.jpg" alt="gen screen - DIPR sectors search" width="720" height="595" /></a>
+
+
+...and here's the resulting table - which we've embedded below by copying the code generated in the white box (above), and pasting it into the html code for this webpage. You can now click on information in the table, to explore further...
+
+
+<iframe style="width: 750px; height: 468px;" src="http://www.d-portal.org/ctrack.html?publisher=GB-COH-06368740&amp;#view=frame&amp;frame=publisher_sectors&amp;size=750" width="320" height="240" frameborder="0" scrolling="no"></iframe>
+
+By changing around what you select in the generator dropdowns you can create a variety of different content - here's a few more examples of content that we generated from the IATI data in d-portal. We'd love to hear your feedback from using d-portal and the generator - please do <a href="mailto:queries@d-portal.org">email us</a> any thoughts and feedback.
+
+<a title="Our open data" href="http://devinit.org/about/open-data/">See here</a> for more information about DI's IATI data.
+
+
+<h3><strong>d-portal generator examples...</strong></h3>
+
+<em>(Publisher) </em><strong>ActionAid International</strong> ~ <em>(View)</em> <strong>List of activities</strong> (5) ~ Mustard ~ 750 pixels
+
+<iframe style="width: 750px; height: 359px;" src="http://www.d-portal.org/ctrack.html?flava=original&amp;rgba=mustard&amp;publisher=NL-KVK-27264198&amp;#view=frame&amp;frame=list_activities&amp;size=750&amp;limit=5" width="320" height="240" frameborder="0" scrolling="no"></iframe>
+
+<em>(Recipient) </em><strong>Angola </strong>~ <em>(View)</em> <strong>Top Donors for a single recipient (graph)</strong> ~ High
+
+<iframe style="width: 750px; height: 344px;" src="http://www.d-portal.org/ctrack.html?flava=high&amp;country=AO&amp;#view=frame&amp;frame=donors_top&amp;size=750" width="320" height="240" frameborder="0" scrolling="no"></iframe>
+
+<em>(Publisher) </em><strong>The World Bank</strong> ~ <em>(View)</em> <strong>Map </strong>~ 750 pixels
+
+<iframe style="width: 750px; height: 501px;" src="http://www.d-portal.org/ctrack.html?publisher=44000&amp;#view=frame&amp;frame=map&amp;size=750" width="320" height="240" frameborder="0" scrolling="no"></iframe>
+
+<em>(Publishers) </em><strong>WaterAid, United Nations Childrens Fund, The Coca-Cola Export Corporation, Heifer International South Africa</strong> ~ (<em>Recipient) </em><strong>Liberia</strong> ~ <em>(View)</em> <strong>Recipients (table)</strong> ~ 750 pixels
+
+<iframe style="width: 750px; height: 273px;" src="http://www.d-portal.org/ctrack.html?country=LR&amp;publisher=XI-IATI-1001,ZA-NPO-013484,41122,GB-CHC-288701&amp;#view=frame&amp;frame=publisher_countries&amp;size=750" width="320" height="240" frameborder="0" scrolling="no"></iframe>
+
+<h4>Links</h4>
+<a href="{tongue_root}ctrack.html#view=generator" class="news_link">Create IATI content with the d-portal Generator</a>
