@@ -1,3 +1,8 @@
+Static site (2014-11-30 shi)
+==============================
+New post - Generator examples
+
+
 Static site (2014-11-28 shi)
 ==============================
 New post - Generator
