@@ -1,3 +1,8 @@
+Development Portal (2014-11-30 shi)
+==============================
+Added link to generator examples news post
+
+
 Development Portal (2014-11-28 shi)
 ==============================
 Fix generator widths consistency in iframes
